[gd_scene load_steps=19 format=3 uid="uid://lpjtb8lmu68i"]

[ext_resource type="Texture2D" uid="uid://csnj3p2sqb4fx" path="res://fish/eel/eeel.png" id="1_43kmr"]
[ext_resource type="Script" uid="uid://dc6vhyynq1mq8" path="res://addons/jakojaannos_components_library/components/character/health.gd" id="1_hl0h3"]
[ext_resource type="Script" uid="uid://dm26ku20d8btu" path="res://fish/eel/eel.gd" id="1_ucu2c"]
[ext_resource type="Script" uid="uid://ds8qvr68yl5bj" path="res://characters/bounty.gd" id="3_1wa5i"]
[ext_resource type="Script" uid="uid://5fp57vk4c4a3" path="res://characters/hitbox.gd" id="3_a4hyh"]
[ext_resource type="Script" uid="uid://dfv0kbqj2ou5n" path="res://characters/damage_effects.gd" id="4_teljg"]
[ext_resource type="Script" uid="uid://bc3ebm4bllm2e" path="res://characters/hurtbox.gd" id="5_teljg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4hyh"]
size = Vector2(64, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_43kmr"]
size = Vector2(64, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl0h3"]
atlas = ExtResource("1_43kmr")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucu2c"]
atlas = ExtResource("1_43kmr")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4hyh"]
atlas = ExtResource("1_43kmr")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl2kc"]
atlas = ExtResource("1_43kmr")
region = Rect2(288, 0, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_wg4o3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl0h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucu2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4hyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl2kc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ucu2c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:flip_v")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_hl0h3"]
resource_name = "die"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:flip_v")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 6)]
}

[sub_resource type="Animation" id="Animation_a4hyh"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 2), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a4hyh"]
_data = {
&"RESET": SubResource("Animation_ucu2c"),
&"die": SubResource("Animation_hl0h3"),
&"hurt": SubResource("Animation_a4hyh")
}

[node name="Eel" type="Node2D"]
script = ExtResource("1_ucu2c")

[node name="Health" type="Node" parent="."]
script = ExtResource("1_hl0h3")
max_health = 4.0
metadata/_custom_type_script = "uid://dc6vhyynq1mq8"

[node name="Bounty" type="Node" parent="." node_paths=PackedStringArray("health")]
script = ExtResource("3_1wa5i")
bounty = 3
health = NodePath("../Health")
metadata/_custom_type_script = "uid://ds8qvr68yl5bj"

[node name="DamageEffects" type="Node" parent="." node_paths=PackedStringArray("nudge_pivot", "flash_node", "health")]
script = ExtResource("4_teljg")
nudge_pivot = NodePath("../Sprite")
flash_node = NodePath("../Sprite")
flash_times = 3
health = NodePath("../Health")
metadata/_custom_type_script = "uid://dfv0kbqj2ou5n"

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 4
collision_mask = 0
script = ExtResource("3_a4hyh")
health = NodePath("../Health")
metadata/_custom_type_script = "uid://5fp57vk4c4a3"

[node name="Shape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_a4hyh")
debug_color = Color(0.964706, 0, 0.494118, 0.419608)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("5_teljg")
damage = 1.0
mode = 1
metadata/_custom_type_script = "uid://bc3ebm4bllm2e"

[node name="Shape" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_43kmr")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wg4o3")
autoplay = "default"

[node name="HurtAnimations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a4hyh")
}

[connection signal="die" from="Health" to="." method="_on_health_die"]
[connection signal="die" from="Health" to="Bounty" method="_on_health_die"]
[connection signal="hurt" from="Health" to="." method="_on_health_hurt"]
[connection signal="hurt_at" from="Health" to="DamageEffects" method="_on_health_hurt_at"]
[connection signal="area_entered" from="Hurtbox" to="Hurtbox" method="_on_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="Hurtbox" method="_on_area_exited"]
[connection signal="finished" from="Hurtsplosion" to="Hurtsplosion" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35834" to="@GPUParticles2D@35834" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35835" to="@GPUParticles2D@35835" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35840" to="@GPUParticles2D@35840" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35841" to="@GPUParticles2D@35841" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35842" to="@GPUParticles2D@35842" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35843" to="@GPUParticles2D@35843" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35844" to="@GPUParticles2D@35844" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35845" to="@GPUParticles2D@35845" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35846" to="@GPUParticles2D@35846" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35847" to="@GPUParticles2D@35847" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35848" to="@GPUParticles2D@35848" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35849" to="@GPUParticles2D@35849" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35850" to="@GPUParticles2D@35850" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35851" to="@GPUParticles2D@35851" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35852" to="@GPUParticles2D@35852" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35853" to="@GPUParticles2D@35853" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@35854" to="@GPUParticles2D@35854" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36097" to="@GPUParticles2D@36097" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36102" to="@GPUParticles2D@36102" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36103" to="@GPUParticles2D@36103" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36116" to="@GPUParticles2D@36116" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36117" to="@GPUParticles2D@36117" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36118" to="@GPUParticles2D@36118" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36119" to="@GPUParticles2D@36119" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36120" to="@GPUParticles2D@36120" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36121" to="@GPUParticles2D@36121" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36122" to="@GPUParticles2D@36122" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36123" to="@GPUParticles2D@36123" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36124" to="@GPUParticles2D@36124" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36125" to="@GPUParticles2D@36125" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36126" to="@GPUParticles2D@36126" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36127" to="@GPUParticles2D@36127" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36128" to="@GPUParticles2D@36128" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36129" to="@GPUParticles2D@36129" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36130" to="@GPUParticles2D@36130" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36131" to="@GPUParticles2D@36131" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36132" to="@GPUParticles2D@36132" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36133" to="@GPUParticles2D@36133" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36134" to="@GPUParticles2D@36134" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36135" to="@GPUParticles2D@36135" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36136" to="@GPUParticles2D@36136" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36137" to="@GPUParticles2D@36137" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36138" to="@GPUParticles2D@36138" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36139" to="@GPUParticles2D@36139" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36140" to="@GPUParticles2D@36140" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36141" to="@GPUParticles2D@36141" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36142" to="@GPUParticles2D@36142" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36143" to="@GPUParticles2D@36143" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36144" to="@GPUParticles2D@36144" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36145" to="@GPUParticles2D@36145" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36146" to="@GPUParticles2D@36146" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36147" to="@GPUParticles2D@36147" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36148" to="@GPUParticles2D@36148" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36149" to="@GPUParticles2D@36149" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36150" to="@GPUParticles2D@36150" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36151" to="@GPUParticles2D@36151" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36152" to="@GPUParticles2D@36152" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36153" to="@GPUParticles2D@36153" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36154" to="@GPUParticles2D@36154" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36155" to="@GPUParticles2D@36155" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36156" to="@GPUParticles2D@36156" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36157" to="@GPUParticles2D@36157" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36158" to="@GPUParticles2D@36158" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36159" to="@GPUParticles2D@36159" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36160" to="@GPUParticles2D@36160" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36161" to="@GPUParticles2D@36161" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36162" to="@GPUParticles2D@36162" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36163" to="@GPUParticles2D@36163" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36164" to="@GPUParticles2D@36164" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36165" to="@GPUParticles2D@36165" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36166" to="@GPUParticles2D@36166" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36175" to="@GPUParticles2D@36175" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36176" to="@GPUParticles2D@36176" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36177" to="@GPUParticles2D@36177" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36178" to="@GPUParticles2D@36178" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36179" to="@GPUParticles2D@36179" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36180" to="@GPUParticles2D@36180" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36181" to="@GPUParticles2D@36181" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36182" to="@GPUParticles2D@36182" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36183" to="@GPUParticles2D@36183" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36184" to="@GPUParticles2D@36184" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36197" to="@GPUParticles2D@36197" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36198" to="@GPUParticles2D@36198" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36199" to="@GPUParticles2D@36199" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36200" to="@GPUParticles2D@36200" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36201" to="@GPUParticles2D@36201" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36202" to="@GPUParticles2D@36202" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36749" to="@GPUParticles2D@36749" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36750" to="@GPUParticles2D@36750" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36751" to="@GPUParticles2D@36751" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36752" to="@GPUParticles2D@36752" method="_on_finished"]
[connection signal="finished" from="@GPUParticles2D@36753" to="@GPUParticles2D@36753" method="_on_finished"]
